--- a/client/main.html
+++ b/client/main.html
@@ -1,11 +1,23 @@
 <head>
   <title>NYU Vote</title>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="container">
+
+	<div id = "header">
+		<span class="bold">NYU</span>Vote
+	</div>
     {{> userErrors}}
     <div id="main">
+	    <div class="backgroundimg">
+		</div>
       {{renderPage}}
+	     
     </div>
-  </div>
+	<div id="footer">
+	    	Sponsored by Student Senator Council <br />
+	    	Created by NYU Abu Dhabi Research & Development <br />
+	    	<a href="#">More About This Project </a>
+	   </div>
+
 </body>
