final css fixes

--- a/client/main.html
+++ b/client/main.html
@@ -5,8 +5,7 @@
 <body>
 
 	<div id = "header">
-		
-		<span class="bold">NYU</span>Vote
+		<div id="nyuvote">NYUVote</div>
 	</div>
     {{> userErrors}}
     <div id="main">
