logout flow perfect

--- a/client/main.html
+++ b/client/main.html
@@ -14,10 +14,6 @@
       {{renderPage}}
 	     
     </div>
-	<div id="footer">
-	    	Sponsored by Student Senator Council <br />
-	    	Created by NYU Abu Dhabi Research & Development <br />
-	    	<a href="#">More About This Project </a>
-	   </div>
+    {{> footer}}
 
 </body>
