--- a/client/main.html
+++ b/client/main.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id = "header">
-		<div id="nyuvote">NYUVote</div>
+    <a href="/"><div id="nyuvote">NYUVote</div></a>
 	</div>
     {{> userErrors}}
     <div id="main">
