--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,8 @@
   <title>NYU Vote</title>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div id = "header">
