--- a/client/main.html
+++ b/client/main.html
@@ -9,16 +9,6 @@
 
 </body>
 
-<template name="oldMaster">
-	<div id = "header">
-    <a href="/"><div id="nyuvote">NYUVote</div></a>
-	</div>
-  {{> userErrors}}
-  <div id="main">
-    <div class="backgroundimg">
-  </div>
-    {{> yield}}
-     
-  </div>
-  {{> footer}}
+<template name="main">
+  {{> yield}}
 </template>
