worked out structure

--- a/packages/userErrors/userErrors_list.html
+++ b/packages/userErrors/userErrors_list.html
@@ -7,8 +7,9 @@
 </template>
 
 <template name="userError">
+<a class="close" type="button" data-dismiss = "alert">
   <div class="alert alert-error">
-    <button class="close" type="button" data-dismiss="alert">&times;</button>
-    {{message}}
+  	<p id="error-message">{{message}}</p>
   </div>
+</a>
 </template>
